update tool tip: add spacing between lines, fix minor issue with message tooltip first line break.

--- a/mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
@@ -5998,6 +5998,13 @@ div.v-button-link.buttonPagingcurrent,div.v-button-link.buttonPaging:hover
 	line-height: normal;
 }
 
+.stickytooltip tr, .v-tooltip-text tr{ 
+	line-height:1.5;
+}
+.stickytooltip a, .v-tooltip-text a {
+	vertical-align:top;
+}
+
 .stickytooltip .stickystatus { /*Style for footer bar within tooltip*/
 	background: black;
 	color: white;
